fix some alignments issues

--- a/themes/bansuri/sass/custom/_page.scss
+++ b/themes/bansuri/sass/custom/_page.scss
@@ -7,27 +7,44 @@
 .highlighted {
   margin-top: 20px;
 }
+
 .region-sidebar-second {
 	background: none;
 	border: none;
 	h2 {
-	border-bottom: 1px dotted;
-	color: #af2900;
-	font-size: 16px;
-	padding-bottom: 5px;
-	padding-left: 10px;
-	padding-top: 5px;
-	text-transform: capitalize;
-	background-color: rgba(175,41,0,.2);
-	font-family: Georgia,"Times New Roman",Times,serif;
-	margin-bottom: 0;
-	margin-top: 0;
+		border-bottom: 1px dotted;
+		border-radius: 0 20px 0 0;
+		color: #af2900;
+		font-size: 14px;
+		padding-bottom: 5px;
+		padding-left: 20px;
+		padding-top: 5px;
+		text-transform: capitalize;
+		background-color: rgba(175,41,0,.2);
+		font-family: Georgia,"Times New Roman",Times,serif;
+		margin-bottom: 0;
+		margin-top: 0;
 	}
 	.bansuri-cds {
+		border-radius: 0px 20px 0px 20px;
+		box-shadow: 0px 0px 10px #ccc;
 		background:url("../images/bg-edges.png");
+		-webkit-transition: all 0.5s;
+		-moz-transition: all 0.5s;
+		-ms-transition: all 0.5s;
+		-o-transition: all 0.5s;
+		transition: all 0.5s;
+		&:hover {
+		    box-shadow: 0px 0px 10px #6c6c6c;
+			-webkit-transition: all 0.5s;
+			-moz-transition: all 0.5s;
+			-ms-transition: all 0.5s;
+			-o-transition: all 0.5s;
+			transition: all 0.5s;
+		}
 		.description {
-			padding-bottom: 10px;
-			padding-top: 10px;
+			padding-bottom: 15px;
+			padding-top: 15px;
 		}
 		.view-content {
 			padding-bottom: 20px;
@@ -43,38 +60,75 @@
 	}
 	.glossery-term {
 		margin-top: 20px;
+		box-shadow: 0px 0px 10px #ccc;
+		border-radius: 0px 20px 0px 20px;
 		background:url("../images/bg-edges.png");
-
+		-webkit-transition: all 0.5s;
+		-moz-transition: all 0.5s;
+		-ms-transition: all 0.5s;
+		-o-transition: all 0.5s;
+		transition: all 0.5s;
+		&:hover {
+		    box-shadow: 0px 0px 10px #6c6c6c;
+			-webkit-transition: all 0.5s;
+			-moz-transition: all 0.5s;
+			-ms-transition: all 0.5s;
+			-o-transition: all 0.5s;
+			transition: all 0.5s;
+		}
     	p {
-    		padding-left: 10px;
-    		padding-right: 10px;
+		    padding-left: 15px;
+		    padding-right: 15px;
+		    padding-bottom: 20px;
+		    font-size: 12px;
     		&:nth-of-type(1) {
 		        font-size: 12px;
 			    font-weight: bold;
 			    text-align: center;
-			    padding-top: 10px;
+			    padding: 10px 10px 0 10px;
+
 			}
 		}
 	}
 	.logout {
 		background:url("../images/bg-edges.png");
 		margin-top: 20px;
-	    a {
-    		color: #c24e37;
-    		text-decoration: none;
+		border-radius: 0px 20px 0px 20px;
+		padding-bottom: 20px;
+		box-shadow: 0px 0px 10px #ccc;
+		-webkit-transition: all 0.5s;
+		-moz-transition: all 0.5s;
+		-ms-transition: all 0.5s;
+		-o-transition: all 0.5s;
+		transition: all 0.5s;		
+		&:hover {
+		    box-shadow: 0px 0px 10px #6c6c6c;
 			-webkit-transition: all 0.5s;
-		    -moz-transition: all 0.5s;
-		    -ms-transition: all 0.5s;
-		    -o-transition: all 0.5s;
-		    transition: all 0.5s;
-	        &:hover {
-	    	    color:#f10000;
-		    	-webkit-transition: all 0.5s;
+			-moz-transition: all 0.5s;
+			-ms-transition: all 0.5s;
+			-o-transition: all 0.5s;
+			transition: all 0.5s;
+		}
+		ul {
+		    padding-top: 10px;
+		    margin-left: 20px;
+	        a {
+	    		color: #c24e37;
+	    		text-decoration: none;
+				-webkit-transition: all 0.5s;
 			    -moz-transition: all 0.5s;
 			    -ms-transition: all 0.5s;
 			    -o-transition: all 0.5s;
 			    transition: all 0.5s;
-	        }
+		        &:hover {
+		    	    color:#f10000;
+			    	-webkit-transition: all 0.5s;
+				    -moz-transition: all 0.5s;
+				    -ms-transition: all 0.5s;
+				    -o-transition: all 0.5s;
+				    transition: all 0.5s;
+		        }
+		    }    
 	    }
 	}
 }
